@@ -31,9 +31,21 @@
 
 #include "qgpssatellitetracker.h"
 
-QGPSSatelliteTracker::QGPSSatelliteTracker(QWidget *parent) : QWidget(parent)
+QGPSSatelliteTracker::QGPSSatelliteTracker(QWidget *parent) 
+: QWidget(parent), Heading(0)
 {
-	resetSatInfo();
+}
+
+void QGPSSatelliteTracker::setSatellites(const std::vector<Satellite>& aList)
+{
+	List = aList;
+	update();
+}
+
+void QGPSSatelliteTracker::setHeading(int x)
+{
+	Heading = x;
+	update();
 }
 
 /**
@@ -49,62 +61,58 @@ QGPSSatelliteTracker::QGPSSatelliteTracker(QWidget *parent) : QWidget(parent)
 void QGPSSatelliteTracker::paintEvent(QPaintEvent *)
 {
     QPainter painter(this);
+    painter.setRenderHint(QPainter::Antialiasing);
+    painter.translate(width()/2,height()/2);
+
+    int rad = width();
+    if (height() < rad)
+	    rad = height();
+    rad /= 2;
+    rad -= 2;
 
     painter.setPen(QPen(palette().mid(), 1, Qt::SolidLine));
     painter.setBrush(QBrush(Qt::black, Qt::NoBrush));
 
     // first paint the two reference circles, one at 0 degrees, and
     // the other at 45 degrees
-    painter.drawEllipse(rect().x(), rect().y(), rect().width()-1, rect().height()-1);
-    painter.drawEllipse(
-        rect().x() + ((rect().width()-1) / 4),
-        rect().y() + ((rect().height()-1) / 4),
-        (rect().width()-1) / 2,
-        (rect().height()-1) / 2);
+    painter.drawEllipse(-rad,-rad, rad*2,rad*2);
+    painter.drawEllipse(-rad/2,-rad/2,rad,rad);
 
     // now the reference lines, one vertical and the other horizontal
-    painter.drawLine(rect().x(), (rect().height()-1) / 2, rect().width()-1, (rect().height()-1) / 2);
-    painter.drawLine((rect().width()-1) / 2, rect().y(), (rect().width()-1) / 2, rect().height()-1);
+    painter.drawLine(-rad,0,rad,0);
+    painter.drawLine(0,-rad,0,rad);
+
+   // plot heading
+   if (List.size())
+    {
+    	painter.setPen(QPen(QColor(240,32,32),3,Qt::SolidLine,Qt::RoundCap));
+	float Alfa = Heading-90;
+	Alfa = Alfa*3.141592/180;
+	float fx = cos(Alfa)*rad*3/4;
+	float fy = sin(Alfa)*rad*3/4;
+	painter.drawLine(0,0,fx,fy);
+	painter.drawLine(fx,fy,
+		fx+cos(Alfa+3.1415*5/6)*8,fy+sin(Alfa+3.1415*5/6)*8);
+	painter.drawLine(fx,fy,
+		fx+cos(Alfa-3.1415*5/6)*8,fy+sin(Alfa-3.1415*5/6)*8);
+    }
+
 
     // now plot the satellites
     painter.setPen(QPen(palette().foreground(), 2, Qt::SolidLine));
     painter.setBrush(QBrush(palette().foreground()));
 
-    for(int i = 0; i < 50; i ++)
+    int x,y;
+    for (unsigned int i=0; i<List.size(); ++i)
     {
-        int x, y;
-
-        if(satArray[i][2] != 0)
+        if(List[i].SignalStrength > 0)
         {
-            getCoordsFromPos(satArray[i][0], satArray[i][1], x, y);
+            getCoordsFromPos(rad,List[i].Elevation,List[i].Azimuth, x, y);
 
             painter.drawEllipse(x - 2, y - 2, 4, 4);
-            painter.drawText(x + 5, y - 1, QString("%1").arg(i));
+            painter.drawText(x + 5, y - 1, QString("%1").arg(List[i].Id));
         }
     }
-}
-
-void QGPSSatelliteTracker::resetSatInfo()
-{
-    for(int i = 0; i < 50; i ++)
-    {
-        satArray[i][0] = satArray[i][1] = satArray[i][2] = 0;
-    }
-}
-
-/**
- * private void QGPSSatelliteTracker::setSatInfo()
- *
- * Stores satellite position in the satArray
- */
-
-void QGPSSatelliteTracker::setSatInfo(int index, int elevation, int azimuth, int snr)
-{
-    satArray[index][0] = elevation;
-    satArray[index][1] = azimuth;
-    satArray[index][2] = snr;
-
-    update();
 }
 
 /**
@@ -120,53 +128,15 @@ void QGPSSatelliteTracker::setSatInfo(int index, int elevation, int azimuth, int
  * @param int &y        Pointer to y-coordinate
  */
 
-void QGPSSatelliteTracker::getCoordsFromPos(int elevation, int azimuth, int &x, int &y)
+void QGPSSatelliteTracker::getCoordsFromPos(int rad, int elevation, int azimuth, int &x, int &y)
 {
-    int theta;
-
-    // translate the azimuth angle to an angle relative to the x-axis
-    // i.e., "snap" it to the x-axis
-    if(azimuth > 270)
-        theta = azimuth - 270;
-    else if(azimuth > 180)
-        theta = 270 - azimuth;
-    else if(azimuth > 90)
-        theta = azimuth - 90;
-    else
-        theta = 90 - azimuth;
+    int theta = azimuth-90;
 
     // since the "origin" of the sky is 90 (directly overhead), reverse
     // elevation to make the origin 0 (an elevation of 90 becomes 0, etc)
     elevation = 90 - elevation;
 
     // you should know this (slept too much in trig)
-    x = int((cos(theta*M_PI/180)) * elevation);
-    y = int((sin(theta*M_PI/180)) * elevation);
-
-    // here we need to make sure that coordinates in quadrants II, III, and IV
-    // have the proper signs
-    if(azimuth > 270) {
-        x = x - (2 * x);
-    }
-    else if(azimuth > 180) {
-        x = x - (2 * x);
-        y = y - (2 * y);
-    }
-    else if(azimuth > 90) {
-        y = y - (2 * y);
-    }
-
-    // scale our x and y to the size of the widget
-    x = int(((double)rect().width() / 180.0) * x);
-    y = int(((double)rect().height() / 180.0) * y);
-
-    // translate our coordinates by shifting the plane right and up
-    // to match the coordinate plane of the widget (to prevent drawing
-    // only one quarter of the plane onto the widget
-    x = (rect().width() / 2) + x;
-    y = (rect().height() / 2) + y;
-
-    // mirror y since QPainter's positive-y goes down and the trigonometric
-    // positive-y goes up
-    y = rect().height() - y;
+    x = cos(theta*M_PI/180) * elevation * rad / 90;
+    y = sin(theta*M_PI/180) * elevation * rad / 90;
 }
